--- a/dev/css/component/carousel--microsite.css
+++ b/dev/css/component/carousel--microsite.css
@@ -12,9 +12,11 @@
     height: 100%;
 }
 
-.carousel--microsite .carousel-control svg {
-    position: relative;
+.carousel--microsite .carousel-control .icon {
+    width: 24px;
+    height: 24px;
 }
+
 .carousel--microsite .carousel-caption {
     bottom: 0;
     padding: 15px 0;
@@ -33,8 +35,9 @@
 .carousel-indicators--visible {
     display: block;
 }
+
 .carousel-caption--bottom {
-    background-color: rgba(35,119,197,1);
+    background-color: rgba(35, 119, 197, 1);
     top: auto;
     position: relative;
 }
@@ -75,10 +78,12 @@
     .carousel-caption--bottom {
         background-color: rgba(35, 119, 197, 0.7);
     }
+
     .carousel--microsite {
         max-height: none;
         margin-bottom: 30px
     }
+
     .carousel--microsite:after {
         background-color: #efefef;
         position: absolute;
@@ -87,64 +92,91 @@
         right: 0;
         height: 30px;
     }
-    .carousel--microsite .carousel-caption{
+
+    .carousel--microsite .carousel-caption {
         padding: 15px 0 30px;
         position: absolute;
     }
-    .carousel--microsite .carousel-indicators--visible{
+
+    .carousel--microsite .carousel-indicators--visible {
         position: absolute;
         top: 75%;
     }
+
     .carousel--microsite .carousel-indicators--visible li {
         background: #B6D1EB;
         border-color: #B6D1EB;
     }
+
     .carousel--microsite .carousel-indicators--visible li.active {
         background: #fff;
         border-color: #fff;
     }
+
     .item--microsite {
-        max-height:425px;
+        max-height: 425px;
     }
+
     .carousel-caption--bottom {
         padding: 30px 0 20px;
         position: absolute;
     }
-    .carousel--microsite .carousel-control svg {
-        top: 0;
-        width: 40px;
-        height: 30px;
+
+    .carousel--microsite .carousel-control {
+        padding-top: 176px;
     }
+
+    .carousel--microsite .carousel-control .icon {
+        top: 0;
+    }
+
     .carousel--microsite .carousel-inner {
         height: 400px;
     }
+
     .item--microsite img {
         min-height: 400px;
     }
+
     .carousel-caption--bottom h2 {
         width: 80%;
         font-size: 20px;
         line-height: 24px;
     }
 }
+
 @media screen and (min-width: 1024px) {
 
     .item--microsite {
-        max-height:450px;
+        max-height: 450px;
     }
+
     .carousel--microsite .carousel-indicators--visible {
         bottom: 15px;
     }
-    .carousel--microsite .carousel-caption{
+
+    .carousel--microsite .carousel-control {
+        padding-top: 170px;
+    }
+
+    .carousel--microsite .carousel-control .icon {
+        width: 30px;
+        height: 30px;
+    }
+
+    .carousel--microsite .carousel-caption {
         padding: 15px 0 35px;
     }
+
     .carousel-caption--bottom {
         padding: 30px 0 20px;
     }
+
     .carousel-caption--bottom h2 {
         font-size: 28px;
         line-height: 32px;
     }
+
     .carousel-caption--bottom h3 {
         font-size: 18px;
         line-height: 26px;
@@ -152,13 +184,13 @@
 }
 
 @media screen and (min-width: 1280px) {
-    .item--microsite{
-        max-height:500px;
+    .item--microsite {
+        max-height: 500px;
     }
 }
 
 @media screen and (min-width: 1900px) {
-    .item--microsite{
-        max-height:560px;
+    .item--microsite {
+        max-height: 560px;
     }
 }
